--- a/09-Data-Structures-Operators/index.html
+++ b/09-Data-Structures-Operators/index.html
@@ -35,6 +35,9 @@
   <body>
     <h1>Data Structures and Modern Operators</h1>
     <script src="script.js"></script>
+    <!-- <script src="CodingChallenge4.js"></script> -->
+    <!-- <script src="CodingChallenge3.js"></script> -->
+    <!-- <script src="CodingChallenge2.js"></script> -->
     <!-- <script src="CodingChallenge1.js"></script> -->
   </body>
 </html>
